--- a/Reactor.Web/Views/Home/Index.cshtml
+++ b/Reactor.Web/Views/Home/Index.cshtml
@@ -1,12 +1,62 @@
 ﻿@model object
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Home Page";
+    Layout = "_Layout";
 }
+<section class="home">
 
-<h2>Welcome to Reactor Homepage</h2>
+    <div class="container">
+            <div class="row mt-2">
+        <div class="col-md-3">
+            Col 1
+        </div>
+        <div class="col-md-6">
+            <div class="status">
+                <div class="d-flex">
+                    <div class="mr-3">
+                        <img src="~/assets/images/person.jpg" class="rounded-circle" width="50" height="50"/>
+                    </div>
+                    <div class="w-100">
+                        <textarea class="form__input"  placeholder="Say something here"></textarea>
+                    </div>
+                </div>
 
-<form asp-controller="Account" asp-action="Logout" method="post">
-    
-<button class="btn btn-warning">Logout</button>
-</form>
+                <div class="mt-3 clearfix">
+                    <div class="d-flex float-left">
+                        <div>
+                            <span>Video</span>
+                        </div>
+                        <div>
+                            <span>Picture</span>
+                        </div>
+                    </div>
+                    <div class="float-right">
+                        <a href="#" class="btn btn-success">Post</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-3">
+                <div class="col-12">
+                    <div class="post">
+                        <div class="post__header">Header</div>
+                        <div class="post__body">Body</div>
+                        <div class="post__footer">Footer</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+                <div class="col-md-3">
+                    @await Component.InvokeAsync("SuggestedFriends")
+                </div>
+    </div>
+
+    </div>
+
+    <form asp-controller="Account" asp-action="Logout" method="post">
+
+        <button class="btn btn-warning">Logout</button>
+    </form>
+</section>
