--- a/Reactor.Web/wwwroot/assets/styles/styles.css
+++ b/Reactor.Web/wwwroot/assets/styles/styles.css
@@ -9,10 +9,14 @@ html {
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  background-color: #e8e8e8; }
+
+.btn {
+  font-size: 1.4rem; }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #777;
   font-weight: 400;
   line-height: 1.7; }
@@ -94,3 +98,42 @@ body {
   background: linear-gradient(to right, rgba(210, 230, 207, 0.9), rgba(40, 180, 133, 0.9)) no-repeat center fixed;
   background-size: cover;
   height: 100vh; }
+
+.home .status,
+.home .post {
+  border-radius: 4px;
+  border: 1px solid #c6c8ca;
+  padding: 2rem;
+  background-color: #f7f7f7; }
+
+.home .suggested__name {
+  font-size: 1.7rem; }
+
+.navbar a.nav-link {
+  font-size: 1.6rem; }
+
+.profile {
+  position: relative; }
+  .profile__cover {
+    width: 100%; }
+    .profile__cover img {
+      width: 100%;
+      height: 40rem; }
+  .profile__min {
+    position: absolute;
+    left: 5%;
+    bottom: -10%;
+    border-radius: 2rem;
+    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.25);
+    width: 20rem;
+    overflow: hidden; }
+    .profile__min img {
+      max-width: 100%; }
+  .profile__stats {
+    background-color: #fff; }
+    .profile__stats-title {
+      text-transform: uppercase;
+      font-size: 1.4rem; }
+    .profile__stats-counter {
+      color: #28b485;
+      font-size: 1.7rem; }
