--- a/Reactor.Web/Views/Shared/Components/SuggestedFriends/Default.cshtml
+++ b/Reactor.Web/Views/Shared/Components/SuggestedFriends/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Reactor.Core.Domain.Members.User>
+﻿@using Reactor.Core.Domain.Users
+@model IEnumerable<Reactor.Core.Domain.Users.User>
 <div class="card suggested">
     <div class="card-header">
         <h2 class="text-capitalize text-center">Suggested friends</h2>
