--- a/Reactor.Web/Views/_ViewImports.cshtml
+++ b/Reactor.Web/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using Reactor.Web.Models.Account
+@using Reactor.Core.Domain.Posts
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,Microsoft.AspNetCore.SpaServices
