--- a/Reactor.Web/Views/Shared/_AccountLayout.cshtml
+++ b/Reactor.Web/Views/Shared/_AccountLayout.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>@ViewData["Title"] - Reactor</title>
+    <link href="~/assets/styles/font-awesome.css" rel="stylesheet"/>
     <link href="~/assets/styles/bootstrap.css" rel="stylesheet"/>
     <link href="~/assets/styles/styles.css" rel="stylesheet"/>
 </head>
@@ -11,6 +12,6 @@
     @RenderBody()
 </section>
 
-
+<script type="text/javascript" asp-append-version="true" src="~/assets/scripts/app.js"></script>
 </body>
 </html>
