--- a/Reactor.Web/Views/Shared/_Layout.cshtml
+++ b/Reactor.Web/Views/Shared/_Layout.cshtml
@@ -54,5 +54,6 @@
 
 </footer>
 <script type="text/javascript" src="~/assets/scripts/app.js" asp-append-version="true"></script>
+<form asp-antiforgery="true"></form>
 </body>
 </html>
