--- a/Reactor.Web/Views/Home/Index.cshtml
+++ b/Reactor.Web/Views/Home/Index.cshtml
@@ -14,20 +14,17 @@
             <div class="col-md-6">
                 <div class="status">
                     <form asp-controller="Home" asp-action="Create" method="post" enctype="multipart/form-data">
-                        <div class="d-flex">
-                            <div class="mr-3">
-                                <img src="~/assets/images/person.jpg" class="rounded-circle" width="50" height="50"/>
-                            </div>
-                            <div class="w-100">
-                                <textarea  class="form__input status__input" asp-for="Content"  required placeholder="Say something here"></textarea>
-                            </div>
+                        <div class="mr-3 status__photo-box">
+                            <img src="@Model.UserProfilePicture" class="status__photo" width="50" height="50"/>
                         </div>
+                        
+                        <textarea  class="form__input status__input" asp-for="Content"  required placeholder="Say something here"></textarea>
 
                         <div class="mt-3 clearfix">
-                            <input type="file" id="file" class="form__input-file inputfile" asp-for="Files" data-multiple-caption="{count} files selected" multiple/>
-                            <label for="file"><i class="fa fa-image"></i> Photo</label>
+                            <input type="file" id="file" accept=".jpg,.jpeg,.png,.gif" class="form__input-file js-inputfile" asp-for="Files" data-multiple-caption="{count} files selected" multiple/>
+                            <label for="file" class="u-margin-left-medium"><i class="fa fa-image"></i>&nbsp; <span>Photo</span></label>
                             <div class="float-right">
-                                <button type="submit" class="btn btn-success">Post</button>
+                                <button type="submit" class="btn btn-success"><i class="fa fa-globe"></i> Post</button>
                             </div>
                         </div>
 
@@ -53,27 +50,3 @@
         <button class="btn btn-warning">Logout</button>
     </form>
 </section>
-
-<script type="text/javascript">
-    var inputs = document.querySelectorAll('.inputfile');
-    Array.prototype.forEach.call(inputs,
-        function(input) {
-            var label = input.nextElementSibling,
-                labelVal = label.innerHTML;
-
-            input.addEventListener('change',
-                function(e) {
-                    var fileName = '';
-                    if (this.files && this.files.length > 1)
-                        fileName = (this.getAttribute('data-multiple-caption') || '').replace('{count}',
-                            this.files.length);
-                    else
-                        fileName = e.target.value.split('\\').pop();
-
-                    if (fileName)
-                        label.querySelector('span').innerHTML = fileName;
-                    else
-                        label.innerHTML = labelVal;
-                });
-        });
-</script>
