--- a/Reactor.Web/Views/_ViewImports.cshtml
+++ b/Reactor.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Reactor.Web.Models.Account
 @using Reactor.Core.Domain.Posts
+@using Reactor.Services.Users
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,Microsoft.AspNetCore.SpaServices
