--- a/Reactor.Web/Views/Home/Index.cshtml
+++ b/Reactor.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                         <div class="mr-3 status__photo-box">
                             <img src="@Model.UserProfilePicture" class="status__photo" width="50" height="50"/>
                         </div>
-                        
+
                         <textarea  class="form__input status__input" asp-for="Content"  required placeholder="Say something here"></textarea>
 
                         <div class="mt-3 clearfix">
@@ -33,8 +33,27 @@
                 </div>
 
                 <div class="row mt-3">
+                    @* List of posts  *@
+                    <div class="    col-12" id="post-container">
+                    </div>
+                    <div class=" no-posts d-none text-center p-2 w-100">    
+                        <h2 class="text-capitalize">No more posts</h2>
+                    </div>
+                    
+                    @if (Model.PostLoadMore)
+                    {
+                        <span class="d-none" id="post-loadMore">@Model.PostLoadMore</span>
+                    }
+                    else
+                    {
+                        <span class="d-none" id="post-loadMore"></span>
+                    }
 
-                    @await Component.InvokeAsync("Posts")
+
+
+                </div>
+                <div class="row text-center d-none post-loader">
+                    <div class="mx-auto" style="font-size: 1.4rem"><i class="fa fa-spin fa-spinner"></i> Loading...</div>
                 </div>
 
             </div>
