--- a/Reactor.Web/Views/Shared/Templates/Comment.cshtml
+++ b/Reactor.Web/Views/Shared/Templates/Comment.cshtml
@@ -9,7 +9,7 @@
 
         <div class="post__comments-list">
 
-            <p class="d-inline-block">
+            <p class="d-inline">
                 <h4 class="d-inline-block">@comment.CommentBy.FullName:</h4>
                 @comment.Content
                 <time class="d-inline-block pull-right post__time timeago" datetime="@comment.CreatedOn.ToString("o")"></time>
