Changed project to use typescript.

--- a/Reactor.Web/Views/Shared/_Layout.cshtml
+++ b/Reactor.Web/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
 <footer>
 
 </footer>
-<script type="text/javascript" src="~/assets/scripts/app.js" asp-append-version="true"></script>
+<script type="text/javascript" src="~/assets/scripts/app-bundle.js" asp-append-version="true"></script>
 <form asp-antiforgery="true"></form>
 </body>
 </html>
