--- a/Reactor.Web/wwwroot/assets/styles/styles.css
+++ b/Reactor.Web/wwwroot/assets/styles/styles.css
@@ -158,10 +158,7 @@ body {
     margin-left: 5rem;
     border: 1px solid #c6c8ca;
     border-radius: 2rem;
-    padding: .7rem 1rem;
-    -webkit-hyphens: auto;
-        -ms-hyphens: auto;
-            hyphens: auto; }
+    padding: .7rem 1rem; }
     .post__comments-list h4 {
       font-weight: 700;
       font-size: 1.4rem;
