Added the ability to like a post.

--- a/Reactor.Web/Views/Home/Index.cshtml
+++ b/Reactor.Web/Views/Home/Index.cshtml
@@ -66,8 +66,8 @@
 
     </div>
 
-    @*<form asp-controller="Account" asp-action="Logout" method="post">
+    <form asp-controller="Account" asp-action="Logout" method="post">
 
         <button class="btn btn-warning">Logout</button>
-    </form>*@
+    </form>
 </section>
