--- a/Reactor.Web/Views/Shared/_AccountLayout.cshtml
+++ b/Reactor.Web/Views/Shared/_AccountLayout.cshtml
@@ -12,6 +12,6 @@
     @RenderBody()
 </section>
 
-<script type="text/javascript" asp-append-version="true" src="~/assets/scripts/app.js"></script>
+<script type="text/javascript" asp-append-version="true" src="~/assets/scripts/app-bundle.js"></script>
 </body>
 </html>
